--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/appointment-booking/component/_appointment-my-account.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/appointment-booking/component/_appointment-my-account.scss
@@ -67,6 +67,8 @@
         font-size: 0.875rem;
         color: $appointment-my-account-black-txt;
         font-family: $alshaya-thin;
+        flex-shrink: 0;
+        flex-grow: 0;
 
         @include breakpoint($only-mobile) {
           max-width: 17.5rem;
@@ -89,6 +91,7 @@
       .appointment-list-companion {
         flex-basis: 17%;
         padding-#{$right}: 1.875rem;
+        word-break: break-all;
 
         > div {
           span {
