--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/appointment-booking/component/_appointment-type.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/appointment-booking/component/_appointment-type.scss
@@ -1,5 +1,11 @@
 .appointment-type-list {
   &-wrapper {
+    padding-top: 1.875rem;
+
+    @include breakpoint($tablet-landscape) {
+      padding-top: 1.1875rem;
+    }
+
     .appointment-booking-section-title {
       @include breakpoint($tablet-landscape) {
         padding-top: 0.6875rem;
